# vidsub

./: AGENTS.md  README.md  config_template.yaml  pyproject.toml
tests/: __init__.py  conftest.py  test_burn.py  test_cli.py  test_config.py  test_ffmpeg.py  test_ffmpeg_presets.py  test_gemini_engine.py  test_integration.py  test_models.py  test_pipeline.py  test_segmentation.py  test_subtitles.py  test_validators.py  test_whisper_engine.py
vidsub/: __init__.py  burn.py  cli.py  config.py  ffmpeg.py  models.py  pipeline.py  progress.py  segmentation.py  ssl_utils.py  subtitles.py  validators.py
vidsub/engines/: __init__.py  base.py  gemini_engine.py  whisper_engine.py
